fix review padding on mobile, closes #135

--- a/less/app.less
+++ b/less/app.less
@@ -910,6 +910,9 @@ li:nth-child(28){
 .modal-body-inner{
 	display:table-cell;
 	padding-top: 30px;
+	@media screen and (max-width: @screen-sm) {
+		padding-top:0;
+	}
 }
 
 .modal-body {
